--- a/index.html
+++ b/index.html
@@ -24,4 +24,4 @@
 
 <a href="./public/about.html">About Me</a>
 <hr />
-<a href="./public/.contact.html">Contact me</a>
+<a href="./public/contact.html">Contact me</a>
