--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
         <title>This is my fight blog, stand up and fight blog</title>
     <head>
     <body>
-        <h1>This is my fight blog, Take back my life blog</h1>
-     
-        <h2>How you too can take back your life</h2>
+        <h1 style="color: blue;">This is my fight blog, Take back my life blog!</h1>
+        <h2 style="color: aqua;">How you too can take back your life</h2>
       
     </body>
     </html>
