--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device=width, initial-scale=1">
-        <title>This is my fight blog, stand up and fight blog</title>
+        <title>Test lower is my fight blog, stand up and fight blog</title>
     <head>
     <body>
         <h1 style="color: blue;">This is my fight blog, Take back my life blog!</h1>
