--- a/index.html
+++ b/index.html
@@ -3,24 +3,43 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device=width, initial-scale=1">
-        <title>Test lower is my fight blog, stand up and fight blog</title>
+        <title>This is my fight blog, stand up and fight blog</title>
     <head>
     <body>
+       
         <h1 style="color: blue;">This is my fight blog, Take back my life blog!</h1>
         <h2 style="color: aqua;">How you too can take back your life</h2>
       
     </body>
     </html>
-    </P><b>Welcome to my blog </b>I don't know what I am going to write yet!
-<i>This is a test of style tags this is only a test </i><br> How do they look
-<hr> and now this is below the line<br>
-<hr>
+    </P><b>Welcome to my blog </br>I don't know what I am going to write yet!
+<i>This is a test of style tags this is only a test </i>
+<br>
+<br> This is what I would like to share:
+<br>
+<ul>
+<li>My daily journey</li>
+<li>Mindfulness</li>
+<li>Meditation</li>
+<li>Godwinks</li>
+<br>
+<br>
+<img src="good vibes only.webp" height="200">
 
-<a href="https://www.google.com">What till you click on me!</a>
-<hr>
-<img src="NanceJean.jpg" height="200">
-<hr />
+
+
+<hr>  <hr>
+
+<a href="https://www.google.com">
+    Go ahead! See if you can a better blog!</a>
+
 
 <a href="./public/about.html">About Me</a>
 <hr />
+
+<img src="NanceJean.jpg" height="200">
+<br>
 <a href="./public/contact.html">Contact me</a>
+<br>
+
+
